# PicoW-Robotic-Arm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  robot.c  robot.h  servo.c  servo.h  try.c
